welcome.lessons.welcome.loopwhile.WhileMoria.scala.error
Balin:3: error: ';' expected but 'else' found.
if(estSurBiscuit()){prendBiscuit();avance();avance();avance();avance();avance();poseBiscuit();else{droite();}}
                                                                                              ^